--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_crashlytics: ^4.3.6
   flutter_svg: ^2.1.0
   email_validator: ^3.0.0
+  carousel_slider: ^5.1.1
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
