--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   email_validator: ^3.0.0
   carousel_slider: ^5.1.1
   get: ^4.7.2
+  logger: ^2.6.0
+  http: ^1.4.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
