--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   logger: ^2.6.0
   http: ^1.4.0
   shared_preferences: ^2.5.3
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
